@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.ght1pc9kc</groupId>
@@ -8,7 +9,8 @@
     <packaging>pom</packaging>
 
     <name>Juery</name>
-    <description>Juery is a tiny Java library to manage search and filter query from user to database. api and basic packages
+    <description>Juery is a tiny Java library to manage search and filter query from user to database. api and basic
+        packages
         have no dependencies. They contain everything you need to use Juery. The jooq package contains useful tools for
         projects using the jOOQ DSL.
     </description>
@@ -23,8 +25,8 @@
         <connection>scm:git:git@github.com:Marthym/juery.git</connection>
         <developerConnection>scm:git:git@github.com:Marthym/juery.git</developerConnection>
         <url>https://github.com/Marthym/juery</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <modules>
         <module>juery-api</module>
@@ -37,7 +39,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <lombok.version>1.18.20</lombok.version>
+        <lombok.version>1.18.22</lombok.version>
         <jetbrains.version>20.1.0</jetbrains.version>
         <jooq.version>3.14.8</jooq.version>
 
@@ -59,15 +61,7 @@
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
 
-        <surefire.argline.opens>
-            --add-opens juery.api/fr.ght1pc9kc.juery.api=ALL-UNNAMED
-            --add-opens juery.api/fr.ght1pc9kc.juery.api.filter=ALL-UNNAMED
-            --add-opens juery.basic/fr.ght1pc9kc.juery.basic=ALL-UNNAMED
-            --add-opens juery.basic/fr.ght1pc9kc.juery.basic.filter=ALL-UNNAMED
-            --add-opens juery.basic/fr.ght1pc9kc.juery.basic.utils=ALL-UNNAMED
-            --add-opens juery.jooq/fr.ght1pc9kc.juery.jooq.pagination=ALL-UNNAMED
-            --add-opens juery.jooq/fr.ght1pc9kc.juery.jooq.filter=ALL-UNNAMED
-        </surefire.argline.opens>
+        <surefire.argline.opens/>
     </properties>
 
 
